--- a/appsettings.json
+++ b/appsettings.json
@@ -9,6 +9,16 @@
     "ResetPasswordPolicyId": "B2C_1_PasswordReset1",
     "EditProfilePolicyId": "B2C_1_editProfileTest1"
   },
+  "AzureADB2C2": {
+    "Instance": "https://markstestorganization1.b2clogin.com",
+    "ClientId": "09717d12-ca7f-4388-8393-dafe42c0c3a5",
+    "CallbackPath": "/signin-oidc-custom",
+    "SignedOutCallbackPath": "/signout/B2C_1_signupsignin1",
+    "Domain": "markstestorganization1.onmicrosoft.com",
+    "SignUpSignInPolicyId": "B2C_1_signupsignin1",
+    "ResetPasswordPolicyId": "B2C_1_PasswordReset1",
+    "EditProfilePolicyId": "B2C_1_editProfileTest1"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
