--- a/appsettings.json
+++ b/appsettings.json
@@ -15,9 +15,7 @@
     "CallbackPath": "/signin-oidc-custom",
     "SignedOutCallbackPath": "/signout/B2C_1_signupsignin1",
     "Domain": "markstestorganization1.onmicrosoft.com",
-    "SignUpSignInPolicyId": "B2C_1_signupsignin1",
-    "ResetPasswordPolicyId": "B2C_1_PasswordReset1",
-    "EditProfilePolicyId": "B2C_1_editProfileTest1"
+    "SignUpSignInPolicyId": "B2C_1_signupsignin1"
   },
   "Logging": {
     "LogLevel": {
